1.2 (unreleased)
----------------

- you can now remove model attributes with `del`


1.1
---

- fix: setup.py not working under some environments (`open` used wrong codec)
- add SellerProfile model
- add `offset` parameter to report.get


1.0
---

- First release