@@ -2,6 +2,7 @@
 ----------------
 
 - you can now remove model attributes with `del`
+- add :meth:`atomx.models.Report.csv` property that returns the report content as a list
 
 
 1.1
